@@ -42,6 +42,7 @@ then
     --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED \
     --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED \
     --add-exports=java.base/sun.nio.cs=ALL-UNNAMED \
+    --add-exports=java.base/sun.util.calendar=ALL-UNNAMED \
     adams.flow.FlowRunner \
     -input "$3" \
     -remote-scripting-engine-cmdline "adams.scripting.engine.DefaultScriptingEngine -port $4" \
