@@ -97,6 +97,7 @@ goto endInit
  --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED^
  --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED^
  --add-exports=java.base/sun.nio.cs=ALL-UNNAMED^
+ --add-exports=java.base/sun.util.calendar=ALL-UNNAMED^
  %HEADLESS% %MAIN% %CMD_LINE_ARGS%
 if ERRORLEVEL 1 goto error
 goto end
