@@ -144,6 +144,7 @@ goto endInit
  -jvm --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED^
  -jvm --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED^
  -jvm --add-exports=java.base/sun.nio.cs=ALL-UNNAMED^
+ -jvm --add-exports=java.base/sun.util.calendar=ALL-UNNAMED^
  -main %MAIN%^
  -doc-dir "%BASEDIR%\docs"^
  %CMD_LINE_ARGS%
